<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pana Taxi</string>
    <string name="title_location">Localizacion</string>
    <string name="title_details">Cargos Especiales</string>
    <string name="title_datehour">Fecha/Hora</string>
    <string name="action_calculate">Calcular</string>
    <string name="originloc_label">Ubicacion</string>
    <string name="destinyloc_label">Destino</string>
    <string name="originloc_placeholder">Ej. La Doña</string>
    <string name="destinyloc_placeholder">Ej. Brisas del Golf</string>
    <string name="Date_label">Fecha de la carrera</string>
    <string name="Time_label">Fecha de la carrera</string>
    <string name="currDate_txt">Fecha actual</string>
    <string name="currTime_txt">Hora actual</string>
    <string name="setDate_btntxt">Escoger Fecha</string>
    <string name="setTime_btntxt">Escoger Hora</string>
    <string name="passenger_label">Cantidad de pasajeros</string>
    <string name="piquera_label">Cantidad de pasajeros</string>
    <string name="selectedTime_label">Hora seleccionada: </string>
    <string name="selectedDate_label">Fecha Seleccionada:</string>
</resources>
