<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".DateHourFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Time_label"/>

            <CheckBox
                android:id="@+id/curentDate_chck"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/currDate_txt"
                android:layout_below="@+id/date_label" />

            <Button
                android:id="@+id/setDate_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setDate_btntxt"
                android:layout_below="@+id/curentDate_chck"
                android:onClick="showDatePickerDialog" />

            <TextView
                android:id="@+id/currDate_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/selectedDate_label"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/setDate_btn"/>

            <TextView
                android:id="@+id/currDate_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/setDate_btn"/>

            <TextView
                android:id="@+id/time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Date_label"
                android:layout_below="@+id/currDate_value"
                android:layout_marginTop="16dp" />

            <CheckBox
                android:id="@+id/curentTime_chck"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/currTime_txt"
                android:layout_below="@+id/time_label" />

            <Button
                android:id="@+id/setTime_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setTime_btntxt"
                android:layout_below="@+id/curentTime_chck"
                android:onClick="showTimePickerDialog" />

            <TextView
                android:id="@+id/currTime_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/selectedTime_label"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/setTime_btn"/>

            <TextView
                android:id="@+id/currTime_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/setTime_btn"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
