<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$LocationFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/origin_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/originloc_label" />

            <AutoCompleteTextView
                android:id="@+id/origin_etxt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/originloc_placeholder"
                android:layout_below="@+id/origin_label"/>

            <TextView
                android:id="@+id/destiny_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:text="@string/destinyloc_label"
                android:layout_below="@+id/origin_etxt"
                android:layout_alignLeft="@+id/origin_etxt" />

            <AutoCompleteTextView
                android:id="@+id/destiny_etxt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/destinyloc_placeholder"
                android:layout_below="@+id/destiny_label"
                android:layout_alignLeft="@+id/destiny_label" />

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>